# Gubash

./: .gitignore  CMakeLists.txt  EULA.md  LICENSE.md  README.md
Gubash/: CMakeLists.txt  main.cpp
Gubash/core/: Gubash.cpp  Gubash.h  Input.cpp  Input.h  Prompt.cpp  Prompt.h
Gubash/utils/: MacrosesPlatform.h  MacrosesStyle.h
docs/: WIKI.md
source/: main.cpp  shell.cpp  shell.h
source/core/: arch.h
source/memory/: arena.cpp  arena.h  bitmap.cpp  bitmap.h  layout.cpp  layout.h  router.cpp  router.h  slab.cpp  slab.h
source/utils/: fgstring.cpp  fgstring.h  string.cpp  string.h
source/utils/allocator/: bitmap.cpp  bitmap.h  routerallocator.cpp  routerallocator.h  slaballocator.cpp  slaballocator.h
tests/: testMemory.cpp  testString.cpp
